website/src/css/custom.css
/* stylelint-disable docusaurus/copyright-header */
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */ 

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #00b5e2;
  --ifm-color-primary-dark: #0079ac;
  --ifm-color-primary-darker: #0072a2;
  --ifm-color-primary-darkest: #005e86;
  --ifm-color-primary-light: #0093d2;
  --ifm-color-primary-lighter: #009adc;
  --ifm-color-primary-lightest: #00aef8;
  --ifm-font-color-base: #1C1E21;
  --ifm-heading-color: #19B6CC;
  --ifm-navbar-background-color: #0086BF;
  --ifm-navbar-link-color: #FFFFFF;
  --ifm-navbar-shadow: 0;
  --ifm-footer-background-color: #0086BF;
  --ifm-footer-title-color: #ffffff;
  --ifm-footer-color: #ffffff;
  --ifm-footer-link-color: #ffffff;
  --ifm-code-font-size: 95%;
}

.navbar__items {
  color: #ffffff;
}

.docusaurus-highlight-code-line {
  background-color: #0033A0;
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.hero.hero--primary {
  background-color: #0086BF;
  background-repeat: no-repeat;
  background-size: cover;
}

.hero.hero--primary img {
  margin-bottom: 30px;
  width: 50%;
}

.hero__title {
  color: #ffffff;
}

.hero--subtitle {
  margin-bottom: 50px;
  font-size: 1.5rem;
}

.hero--bigtext {
  margin-bottom: 20px;
  margin-left: 20%;
  margin-right: 20%;
  font-size: 1.2rem;
}

.row h2 {
  margin-bottom: 30px;
}

.button.button--secondary {
  color: white;
}

.button.button--secondary.button--outline:not(.button--active):not(:hover) {
  color: white;
}

.row--center h2{
  color: #29327A;
  font-size: 35px;
  font-weight: bolder;
  text-align: center;
  margin-left: 0;
  margin-right: 0;
  width:100%;
}

span {
  color: var(#ffffff);
}

body{
  font-family: 'Overpass', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
  sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

.padding {
  margin-top: 25px;
  margin-bottom: 25px;
}

